<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#093B4D"
    android:contentDescription="@string/Empty"
    tools:context=".UI.About">

    <TextView
        android:id="@+id/reportTitle"
        android:layout_width="158dp"
        android:layout_height="66dp"
        android:layout_marginTop="19dp"
        android:text="About"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homebutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="73dp"
        android:layout_height="72dp"
        android:contentDescription="@string/Empty"
        android:src="@drawable/homebuttonicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/headerunderline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportTitle" />

    <Button
        android:id="@+id/homebutton"
        android:layout_width="63dp"
        android:layout_height="71dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="352dp"
        android:layout_marginBottom="680dp"
        android:background="#0000"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="13dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="382dp"
            android:layout_height="218dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/purposeStatement"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/reason"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="381dp"
            android:layout_height="299dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/reasonStatement"
            android:textAlignment="center"
            android:textColor="#FFFFF0"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/linkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/hyperlink"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>